--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.19",
     "@types/react": "^16.2.0",
+    "@types/react-bootstrap": "^0.32.29",
     "@types/react-dom": "^16.2.0",
+    "bootstrap": "^5.1.3",
+    "bootstrap-4-react": "^0.0.59",
     "react": "^16.2.0",
+    "react-bootstrap": "^2.1.0",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
