--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^16.2.0",
     "bootstrap": "^5.1.3",
     "bootstrap-4-react": "^0.0.59",
+    "mdbreact": "^5.2.0",
     "react": "^16.2.0",
     "react-bootstrap": "^2.1.0",
     "react-bootstrap-validation": "^0.1.11",
