--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.2.0",
     "@types/react-bootstrap": "^0.32.29",
     "@types/react-dom": "^16.2.0",
+    "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "bootstrap-4-react": "^0.0.59",
     "mdbreact": "^5.2.0",
@@ -19,6 +20,7 @@
     "react-dom": "^16.2.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.3",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
@@ -45,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.21"
   }
 }
