--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap-4-react": "^0.0.59",
     "mdbreact": "^5.2.0",
     "react": "^16.2.0",
+    "react-beforeunload": "^2.5.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^6.2.1",
