--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-beforeunload": "^2.5.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^16.2.0",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.4",
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.21"
   }
 }
