--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cash_flow_react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -14,6 +15,7 @@
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "bootstrap-4-react": "^0.0.59",
+    "lodash": "^4.17.21",
     "mdbreact": "^5.2.0",
     "react": "^16.2.0",
     "react-beforeunload": "^2.5.2",
@@ -21,6 +23,7 @@
     "react-dom": "^16.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.1.1",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
@@ -50,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.178",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.21"
   }
