--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.21",
     "mdbreact": "^5.2.0",
     "react": "^16.2.0",
+    "react-autosuggest": "^10.1.0",
     "react-beforeunload": "^2.5.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^16.2.0",
@@ -55,6 +56,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.178",
+    "@types/react-autosuggest": "^10.1.5",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.21"
   }
