--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "/",
   "dependencies": {
+    "@ashvin27/react-datatable": "^1.5.3",
     "@salesforce/core": "^2.35.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -12,17 +13,26 @@
     "@types/node": "^16.11.19",
     "@types/react": "^16.2.0",
     "@types/react-bootstrap": "^0.32.29",
+    "@types/react-bootstrap-table-next": "^4.0.17",
+    "@types/react-bootstrap-table2-paginator": "^2.1.2",
     "@types/react-dom": "^16.2.0",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "bootstrap-4-react": "^0.0.59",
+    "classnames": "^2.3.1",
+    "font-awesome": "^4.7.0",
     "lodash": "^4.17.21",
     "mdbreact": "^5.2.0",
     "react": "^16.2.0",
     "react-autosuggest": "^10.1.0",
     "react-beforeunload": "^2.5.2",
     "react-bootstrap": "^2.1.0",
+    "react-bootstrap-sidebar-menu": "^0.1.2",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^16.2.0",
+    "react-icons": "^4.3.1",
+    "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.1",
@@ -55,6 +65,7 @@
     ]
   },
   "devDependencies": {
+    "@types/classnames": "^2.3.1",
     "@types/lodash": "^4.14.178",
     "@types/react-autosuggest": "^10.1.5",
     "@types/react-router-dom": "^5.3.3",
